<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D70B1"
    tools:context=".AddSubscriberActivity">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/nameTxt"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/nametxt"
        android:inputType="textPersonName"
        android:text="@string/nametxt"
        android:textColor="@color/colorLight"
        android:textSize="20sp"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/relationTxt"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/relationshiptxt"
        android:inputType="textPersonName"
        android:text="@string/relationshiptxt"
        android:textColor="@color/colorLight"
        android:textSize="20dp"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/contactTxt"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/Contacttxt"
        android:inputType="phone"
        android:text="@string/Contacttxt"
        android:textColor="@color/colorLight"
        android:textSize="20dp"
        app:backgroundTint="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relationTxt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="213dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="8dp"
        android:text="@string/addSubinfo"
        android:textColor="@color/colorLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_icon"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:onClick="AddSubscriber"
        android:paddingLeft="20dp"
        android:text="@string/addtxt"
        android:textColor="@color/colorLight"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactTxt" />
</android.support.constraint.ConstraintLayout>